client/templates/snaxterLayout/snaxterLayout.less
@import "{reactioncommerce:reaction-ui}/client/styles/variables.less";
@import "{reactioncommerce:reaction-ui}/client/styles/mixins.less";


/*
some corrections to make Snaxter Template work with Reaction
*/

.mbr-navbar--sticky .mbr-navbar__section,
.mbr-navbar--stuck .mbr-navbar__section {
    z-index: 1;
}

.mbr-navbar__section,
.mbr-navbar--short.mbr-navbar--sticky .mbr-navbar__section,
.mbr-navbar--short.mbr-navbar--stuck .mbr-navbar__section {
    position: static !important;
    z-index: 0;
}

.mbr-navbar:before, .mbr-navbar__container {
  height: 0px !important;
}

#menu-0 {
  disp__lay: none;
}

.mbr-navbar__container .reaction-navigation-header {
  width: 90%;
  /*padding-top: 10px;*/
}

div.product-variants .form-control {
  padding: 6px 12px;
}

.variant-edit-form {
  background-color: transparent;
}

.variant-form.well,
.variant-edit-form {
  background-color: #fafafa;
  border: 0;
}

.variant-form .form-control {
  border-width: 1px;
}

.btn.btn-success.add-to-cart-block {
  padding: 6px 12px;
}

.add-to-cart-block input#add-to-cart-quantity {
  padding: 6px 12px;
  border: 0;
  margin-right: 5px;
}

.btn-block a:hover {
  color: #ffffff !important;
}

.accounts-dialog.dropdown-menu .btn-block {
  padding: 9px auto !important;
}

@media screen and (max-width: 767px) {
  .container-lg {
      width: 100%;
      margin-left: 0 !important;
      margin-right: 0 !important;
  }
}

.product-list .table > tbody > tr > td.no-border,
.backend-product-list .table > tbody > tr > td.no-border {
  border-top: 0 !important;
}

.product-info-block {
  float: left;
  width: 150px;
  margin-bottom:
  20px;
  margin-right: 20px;
}

@media screen and (max-width: @screen-xs-max) {
  .product-info-block {
    float: none;
    min-width: 200px;
  }
}

.product-desc {
  min-width: 300px;
}

#btn-checkout {
  margin-bottom: 20px;
}

.cart-alert .cart-alert-checkout {
  height: auto;
}

.form-control {
  padding: 6px 12px !important;
}

.product-detail-map h2,
.product-detail-map div.address-text {
  padding-left: 20px;
}

@media screen and (min-width: @screen-xs-max) {

}

@media screen and (max-width: @screen-xs-max) {
  .container-main {
      padding: 20px 10px 135px 10px;
  }

  .product-detail-edit.description-edit,
  .product-detail-field.description {
    padding: 15px;
  }

  .variant-edit-form .form-group {
    width: 100%;
  }

  .btn.btn-success.add-to-cart-block {
    margin-left: 15px;
    width: 90%
  }

  .btn.btn-success.add-to-cart-block .add-to-cart-text {
    display: inline;
    white-space: normal;
  }
}

.profile-edit-page .flex-item .panel {
  width: 100%;
}

.profile-edit-page #galleryDropPane,
.profile-page #galleryDropPane {
  max-width: 300px;
  margin: 5px auto 20px auto;
}

.double-column {
  clear: both;
}

@media screen and (max-width: @screen-xs-min) {
  #logged-in-display-name {
    display: none;
  }
}

